# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  pyproject.toml
brain_games/: .brain_prime.py.swp  .brain_progression.py.swp  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games/scripts/: brain-even.py  brain-gcd.py  brain-prime.py  brain-progression.py  brain_calc.py  brain_games.py
sudo_ford_brain_games.egg-info/: PKG-INFO  SOURCES.txt
